# AlgoRust

./: Cargo.toml  TASKLIST.md  config.toml  pinescript_indicators.pine  requirements.txt  visualize_backtest.py
backtest_results/: BACKTEST_SUMMARY.json  BTCUSDT_15m_backtest.json  BTCUSDT_1d_backtest.json  BTCUSDT_1h_backtest.json  BTCUSDT_1m_backtest.json  BTCUSDT_1w_backtest.json  BTCUSDT_30m_backtest.json  BTCUSDT_4h_backtest.json  BTCUSDT_5m_backtest.json  BTCUSDT_all_time_backtest.json  ETHUSDT_15m_backtest.json  ETHUSDT_1d_backtest.json  ETHUSDT_1h_backtest.json  ETHUSDT_30m_backtest.json  ETHUSDT_4h_backtest.json  ETHUSDT_5m_backtest.json  SOLUSDT_15m_backtest.json  SOLUSDT_1d_backtest.json  SOLUSDT_1h_backtest.json  SOLUSDT_30m_backtest.json  SOLUSDT_4h_backtest.json  SOLUSDT_5m_backtest.json
src/: alpaca.rs  analytics.rs  connect.rs  engine.rs  indicators.rs  main.rs  mtf_analysis.rs  policy.rs  safemode.rs  state.rs  types.rs
src/backtest/: runner.rs
